# ai-course

./: .gitignore  pyproject.toml  tokenization-01.py  tokenization-02.py  tokenization-03.py
agents/: exemplo-1.py  exemplo-2.py  exemplo-3.py
agents/memory/: mem-1.py  mem-2.py
agents/workflows/: parallelization.py  prompt-chaining.py  routing.py
docling/: 1-extraction.py  2-extration-images.py  3-chunking.py  4-hybrid-chunker.py  5.metadados.py  6-embedding.py
fundamentos/rag/: rag-qdrant.py  rag.py
fundamentos/tokenization/: tokenization-01.py  tokenization-04.py
projeto/: docker-compose.yml  financial_file.md  ingestion.py  query.py  reset_collection.py  test_edgar.py
projeto/utils/: edgar_client.py  semantic_chunker.py
