[project]
name = "ai-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docling>=2.77.0",
    "edgartools>=5.30.0",
    "fastapi>=0.136.0",
    "groq>=1.0.0",
    "hdbscan>=0.8.42",
    "langextract>=1.1.1",
    "mem0ai>=2.0.0",
    "nltk>=3.9.3",
    "numpy>=2.4.2",
    "openai>=2.32.0",
    "qdrant-client[fastembed]>=1.17.0",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.2.3",
    "uvicorn>=0.44.0",
    "whoosh>=2.7.4",
    "yfinance>=1.3.0",
]
